2010-07-09  Eli Zaretskii  <eliz@gnu.org>

	* function.c (abspath): Support absolute file names in UNC format.
	(Savannah bug #30312.)

	* job.c (pid2str) [WINDOWS32]: Don't use %Id with GCC < 4.x.
	(exec_command) [WINDOWS32]: Use pid2str instead of non-portable
	%Id.

	* main.c (handle_runtime_exceptions): Use %p to print addresses,
	to DTRT on both 32-bit and 64-bit hosts.  Savannah bug #27809.

	* job.c (w32_kill, start_job_command, create_batch_file): Use
	pid_t for process IDs and intptr_t for the 1st arg of
	_open_osfhandle.
	* function.c (windows32_openpipe): Use pid_t for process IDs and
	intptr_t for the 1st arg of _open_osfhandle.
	(func_shell): Use pid_t for process IDs.
	* main.c (main) [WINDOWS32]: Pacify the compiler.
	* config.h.W32.template (pid_t): Add a definition for 64-bit
	Windows builds that don't use GCC.
	Savannah bug #27809.  Patch by Ozkan Sezer <sezeroz@gmail.com>

2010-07-06  Paul Smith  <psmith@gnu.org>

	* main.c (main): Set a default value of "-c" for .SHELLFLAGS.
	* NEWS: Mention the new behavior of .POSIX and the new .SHELLFLAGS
	variable.
	* job.c (construct_command_argv): Retrieve the .SHELLFLAGS value
	and pass it to construct_command_argv_internal().
	(construct_command_argv_internal): If .SHELLFLAGS is non-standard
	use the slow path.  Use that value instead of hard-coded "-c".

2010-07-05  Paul Smith  <psmith@gnu.org>

	* implicit.c (pattern_search): lastslash can be const.
	* dir.c (downcase): Remove unused variable.
	* hash.c (hash_init): Cast sizeof for error message.
	* arscan.c (ar_scan): Cast to char* for WINDOWS32.
	(ar_member_touch): Ditto.
	* ar.c (glob_pattern_p): Avoid symbol collision: open -> opened
	* signame.c (strsignal): Ditto: signal -> sig
	* job.c (create_batch_file): Ditto: error -> error_string
	(pid2str): Portably convert a pid_t into a string
	(reap_children): Use it.
	(start_waiting_job): Use it.
	Savannah bug #27809.  Patch by Ozkan Sezer <sezeroz@gmail.com>

2010-07-03  Paul Smith  <psmith@gnu.org>
